@@ -449,7 +449,7 @@ namespace libtorrent
 		else
 		{
 			set_state(torrent_status::downloading_metadata);
-			if (!m_trackers.empty()) start_announcing();
+			start_announcing();
 		}
 	}
 
@@ -3078,8 +3078,7 @@ namespace libtorrent
 		if (settings().prefer_udp_trackers)
 			prioritize_udp_trackers();
 
-		if (!m_trackers.empty()) start_announcing();
-		else stop_announcing();
+		if (!m_trackers.empty()) announce_with_tracker();
 	}
 
 	void torrent::prioritize_udp_trackers()
@@ -3128,7 +3127,7 @@ namespace libtorrent
 		if (k - m_trackers.begin() < m_last_working_tracker) ++m_last_working_tracker;
 		k = m_trackers.insert(k, url);
 		if (k->source == 0) k->source = announce_entry::source_client;
-		if (!m_trackers.empty()) start_announcing();
+		if (!m_trackers.empty()) announce_with_tracker();
 	}
 
 	bool torrent::choke_peer(peer_connection& c)
